[Enhancement] Read the PostgreSQL array element types a StarRocks column can hold (#63295)
Signed-off-by: stephen <stephen5217@163.com>
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>
Co-authored-by: wanpengfei-git <wanpengfei91@163.com>